# zos

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  bitd.py  bot.py  bot_utils.py  channels.yml  config.yaml.example  direct_messages.py  keys.yml  memory.py  pyproject.toml  recent-changes.sh  requirements.txt  summarize.py  talk.py
.claude/: CLAUDE.md
.claude/agents/: schema-validator.md  story-implementer.md  story-reviewer.md  story-tester.md
.claude/commands/: git.md  human-docs.md  ingest.md  interrogate.md  new-domain.md  status.md  sync-spec.md  verify.md
config/: config.example.yml
data/: self-concept.md  spec_analysis.md
docs/: README.md
docs/concepts/: how-zos-thinks.md  index.md  privacy-model.md  salience-and-attention.md  topics-and-memory.md  what-is-zos.md
docs/configuration/: config-reference.md  environment-variables.md  index.md  model-profiles.md
docs/getting-started/: configuration.md  discord-setup.md  first-run.md  index.md  prerequisites.md
docs/layers/: anatomy-of-a-layer.md  built-in-layers.md  index.md  reflection-flow.md
docs/operations/: api-reference.md  cli-reference.md  index.md  log-patterns.md  monitoring.md  troubleshooting.md
docs/reference/: architecture-diagram.md  glossary.md
ingest/: review1.md  zos-seed.md
layers/channel_digest/: README.md  layer.yml
layers/conversation/: channel-speak.yaml  dm-response.yaml  subject-share.yaml
layers/emoji_semantics/: README.md  layer.yml
layers/reflection/: nightly-channel.yaml  nightly-dyad.yaml  nightly-emoji-patterns.yaml  nightly-subject.yaml  nightly-user.yaml  weekly-emoji-patterns.yaml  weekly-meta.yaml  weekly-self.yaml
layers/social_dynamics/: README.md  layer.yml
layers/user_profile/: README.md  layer.yml
memories/: self
plan/: plan.md  project.md  prompts.md
plan/archived/: phase5-critique.md
prompts/: _base.jinja2  _chat_guidance.jinja2
prompts/base/: common.jinja2
prompts/channel/: reflection.jinja2
prompts/conversation/: channel-speak.jinja2  dm-response.jinja2  filter.jinja2  subject-share.jinja2
prompts/emoji/: reflection.jinja2
prompts/self/: concept_update_check.jinja2  meta_reflection.jinja2  reflection.jinja2
prompts/subject/: reflection.jinja2
prompts/user/: dyad_reflection.jinja2  emoji_reflection.jinja2  reflection.jinja2
spec/: MASTER.md  README.md  glossary.md
spec/architecture/: data-model.md  mvp-scope.md  overview.md
spec/domains/: _TEMPLATE.md  chattiness.md  insights.md  (+6 more)
tests/: __init__.py  conftest.py  test_api.py  test_api_dev.py  test_api_health.py  test_api_insights.py  test_api_readable.py  test_api_runs.py  test_api_salience.py  test_api_ui.py  test_backfill.py  test_budget.py  test_channel_digest.py  test_cli.py  test_commands.py  test_config.py  test_conversation.py  test_conversation_context.py  test_cross_layer_integration.py  test_database.py  test_db.py  test_db_queries_media.py  test_decay.py  test_discord_client.py  test_discord_repository.py  test_dm.py  test_earning.py  test_emoji_semantics.py  test_epic2_expanded.py  test_executor.py  test_image.py  test_insights.py  test_integration.py  test_layer_context.py  test_layer_executor.py  test_layer_loader.py  test_layer_nodes.py  test_layer_schema.py  test_layers.py  test_links.py  (+29 more)
(+213 files in other folders)
