[project]
name = "zos"
version = "0.1.0"
description = "Discord agent with temporal depth"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "discord.py>=2.3.0",
    "apscheduler>=3.10.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "python-ulid>=2.2.0",
    "structlog>=24.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
zos = "zos.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # SQLAlchemy internal use of datetime.utcnow() - outside our control
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning:sqlalchemy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled separately
